corrected issue with mobile nav - specificity issue and z-index issue

--- a/app/scss/layout/_navbar.scss
+++ b/app/scss/layout/_navbar.scss
@@ -17,8 +17,8 @@ body {
 }
 
 .nav-top{
-	z-index: 2;
-	margin-top: $margin-medium * 4;
+	z-index: 3;
+	position: relative;
 	width: 100vw;
 	background-color: $color-main;
 
@@ -29,8 +29,11 @@ body {
 		padding: 0;
 	}
 
+	@include screen-type(desktop){
+		margin-top: $margin-medium * 4;
+	}
+
 	.menu {
-		border-top: 3px dotted #e8e8e8;
 		display: flex;
 		border-left: 3px solid $color-accent;
 		border-bottom: 3px solid $color-accent;
@@ -74,6 +77,7 @@ body {
 		@include screen-type(desktop){
 			max-width: $section-width-desktop;
 			margin:  0 auto;
+			border-top: 3px dotted #e8e8e8;
 		}
 		
 	
@@ -191,7 +195,7 @@ body {
 
 	/* JavaScript function added classes */
 	.toggle-mobile-nav{
-		transform: translateX(0vw);
+		transform: translateX(0vw) !important;
 		transition: transform 1s ease-in;
 	}
 
